# janet

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
examples/tictactoe/: .plan_state.json  factories.yaml  identities.yaml  plan.yaml  plan_with_macros.yaml  policy.yaml  roles.yaml  session.yaml  statements.yaml  transport.yaml
janet/: cli.py  execution_result.py  helpers.py  main.py  phase_executor.py  phase_resource.py  plan_renderer.py  plan_transformer.py  sample.ipynb
plantangenet/factories/: __init__.py  argument_value_factory.py  fresh_id.py  random_slug.py
plantangenet/messaging/: __init__.py  nats_connector.py
plantangenet/policy/: __init__.py  identity.py  policy.py  role.py  statement.py
plantangenet/session/: __init__.py  session.py  squad.py
plantangenet/storage/: __init__.py  redis_connector.py
schemas/: plan.json
schemas/plantangenet.factories/v1/: ArgumentValue.json  FreshId.json  RandomSlug.json
schemas/plantangenet.messaging/v1/: NATS.json
schemas/plantangenet.policy/v1/: Identity.json  Policy.json  Role.json  Statement.json
schemas/plantangenet.session/v1/: Session.json  Squad.json
schemas/plantangenet.storage/v1/: RedisConnector.json
tests/unit/: test_cli.py  test_meatball_integration.py
